add js favorite and all tittle

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
             <button class="js-searchButton" type="submit">Buscar</button>
          </form>
 
-        <section>
+        <section class="section__series">
             <div class="js-containerSeries">
-                <!-- contenedor series favoritas -->
+                <!-- contenedor series buscadas-->
             </div>
         
 
-        <div class="js-containerFavoriteSeries"> 
+            <div class="js-containerFavoriteSeries"> 
+                <!-- contenedor series favoritas -->
 
-        </div>
-        <section></section>
+            </div>
+        </section>
 
     </main>
     
