add js titles series

--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
          </form>
 
         <section class="section__series">
+            
             <div class="js-containerSeries">
+                <h2 class="hidden js-titleResults">Resultados</h2>
                 <!-- contenedor series buscadas-->
             </div>
         
 
             <div class="js-containerFavoriteSeries"> 
+                <h2 class="hidden js-titleFav">Series favoritas</h2>
+
                 <!-- contenedor series favoritas -->
 
             </div>
