fixed fuction renderseries

--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
+<body class="body">
 
-    <header>
-        <h1>Buscador de Series de Anime</h1>
+    <header class="header">
+        <h1 class="title__h1">Buscador de Series de Anime</h1>
     </header>
 
     <main>
-        <form action="">
+        <form class="form" action="">
             <label for="animeSeries"></label>
-            <input class="js-inputSearch"type="text" name="animeSeries" id="animeSeries">
-            <button class="js-searchButton" type="submit">Buscar</button>
+            <input size=80 class="input__search js-inputSearch"type="text" name="animeSeries" id="animeSeries">
+            <button class="search__button js-searchButton" type="submit">Buscar</button>
          </form>
 
         <section class="section__series">
             
-            <div class="js-containerSeries">
+            <div class="container__series js-containerSeries">
                 <h2 class="hidden js-titleResults">Resultados</h2>
                 <!-- contenedor series buscadas-->
             </div>
