--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
             <div class="container__titleSeries">
                 <h2 class="title__results hidden js-titleFav">Series favoritas</h2>
-                <div class="container__series js-containerFavoriteSeries">
+                <div class="container__seriesfav js-containerFavoriteSeries">
                     <!-- contenedor series favoritas -->
                 </div>
             </div>
             
             <div class="container__titleSeries">
                 <h2 class="title__results hidden js-titleResults">Resultados</h2>
-                <div class="container__series js-containerSeries">
+                <div class="container__series hidden js-containerSeries">
                     <!-- contenedor series buscadas-->
                 </div>
             </div>
