hidden container fav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="container__titleSeries">
                 <h2 class="title__results hidden js-titleFav">Series favoritas</h2>
-                <div class="container__seriesfav js-containerFavoriteSeries">
+                <div class="container__seriesfav hidden js-containerFavoriteSeries">
                     <!-- contenedor series favoritas -->
                 </div>
             </div>
