changes in styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <form class="form" action="">
             <label for="animeSeries"></label>
-            <input size=80 class="input__search js-inputSearch"type="text" name="animeSeries" id="animeSeries">
+            <input  class="input__search js-inputSearch"type="text" name="animeSeries" id="animeSeries">
             <button class="search__button js-searchButton" type="submit">Buscar</button>
          </form>
 
@@ -32,7 +32,7 @@
 
             
 
-            <div class="empty__input js-message"></div>
+            <div class="empty__input zjs-message"></div>
             <!-- mensaje de valor de input incorrecto -->
             
             <div class="container__titleSeries">
