add bonus 5 reset button

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     </header>
 
     <main>
-        <form class="form" action="">
+        <form class="form js-form" action="">
             <label for="animeSeries"></label>
             <input  class="input__search js-inputSearch"type="text" name="animeSeries" id="animeSeries">
-            <button class="search__button js-searchButton" type="submit">Buscar</button>
+            <button class="button js-searchButton" type="submit">Buscar</button>
+            <button class="button js-resetButton" type="submit">Reset</button>
          </form>
 
         
