changes in html and styles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             
 
-            <div class="empty__input zjs-message"></div>
+            <div class="empty__input js-message"></div>
             <!-- mensaje de valor de input incorrecto -->
             
             <div class="container__titleSeries">
